--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,13 @@
             <version>5.6.0</version>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.20</version>
+        </dependency>
+
     </dependencies>
     <build>
         <finalName>itcluster-java9</finalName>
