--- a/pom.xml
+++ b/pom.xml
@@ -158,9 +158,9 @@
             <plugin>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.22.1</version>
-                <configuration>
-                    <testFailureIgnore>true</testFailureIgnore>
-                </configuration>
+<!--                <configuration>-->
+<!--                    <testFailureIgnore>true</testFailureIgnore>-->
+<!--                </configuration>-->
             </plugin>
             <plugin>
                 <artifactId>maven-install-plugin</artifactId>
